11712702-project2/test/test_2_r05.out
Error type 8 at Line 2: incompatiable return type
Error type 5 at Line 8: unmatching type int and float
Error type 5 at Line 8: unmatching type int and error
