11712702-project2/test/test_2_r05.spl
float add(int a,int b){
    return 0;
}
int test1()
{

  int i=0,j=0;
  i = j+ add(1,2);
  return 0;
}
